# rompatcher

./: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml  install.sh  justfile  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/benches/: only_bench.rs
crates/cli/src/: main.rs
crates/cli/src/commands/: dispatch.rs  verify.rs
crates/cli/src/commands/apply/: input.rs  mod.rs  output.rs
crates/cli/src/commands/apply/only/: verify.rs
crates/cli/src/utils/: logging.rs  paths.rs  retroachievements.rs  validation.rs
crates/cli/tests/: only_modes_tests.rs  retroachievements_tests.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs
crates/core/tests/: common.rs
crates/features/: Cargo.toml
crates/features/src/: lib.rs
crates/features/src/retroachievements/: api.rs  mod.rs  types.rs
crates/features/src/validation/: trait_def.rs  validator.rs
crates/features/tests/: retroachievements_tests.rs  validation_tests.rs
crates/formats/: Cargo.toml
crates/formats/FORMAT_TEMPLATE/src/: apply_mod.rs  helpers.rs  metadata.rs  mod.rs  validate.rs
crates/formats/benches/: aps_bench.rs  bdf_bench.rs  bps_bench.rs  ebp_bench.rs  ips_bench.rs  ppf_bench.rs  rup_bench.rs  ups_bench.rs  xdelta_bench.rs
crates/formats/src/: lib.rs
crates/formats/src/aps/: mod.rs
examples/: README.md  basic_apply.rs  batch_patching.rs  format_detection.rs  metadata_extraction.rs  with_validation.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_aps.rs  fuzz_bdf.rs  fuzz_bps.rs  fuzz_detect.rs  fuzz_ebp.rs  fuzz_ips.rs  fuzz_ppf.rs  fuzz_rup.rs  fuzz_ups.rs  fuzz_xdelta.rs
test_files/: README.md
(+150 files in other folders)
