[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/formats",
    "crates/features",
    "crates/cli",
]

[workspace.package]
version = "0.4.4"
edition = "2024"
rust-version = "1.94"
authors = ["ddCeka"]
license = "MIT"
repository = "https://github.com/ddCeka/rompatcher"

[workspace.dependencies]
# Shared dependencies across crates
thiserror = "2.0"
anyhow = "1.0"

[profile.release]
# Size optimization for release builds
strip = true          # Strip symbols automatically
opt-level = "z"       # Optimize for size
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization (slower compile)
panic = "abort"       # Smaller panic handler
