[package]
name = "rompatcher-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for ROM patching"

[lib]
name = "rompatcher_cli"
path = "src/lib.rs"

[[bin]]
name = "rompatcher"
path = "src/main.rs"

[dependencies]
rompatcher-core = { path = "../core" }
rompatcher-formats = { path = "../formats" }
rompatcher-features = { path = "../features" }
anyhow.workspace = true
clap = { version = "4.6", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[features]
default = ["validation", "retroachievements"]
validation = ["rompatcher-features/validation"]
retroachievements = ["rompatcher-features/retroachievements"]

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "only_bench"
harness = false
